# fiap_5mlt_datathon

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  main.py  routes.py  schemas.py
docs/: PRD.md  TECHSPEC.md  postman_collection.json
monitoring/: drift_dashboard.py  logger.py
notebooks/: eda.ipynb
postman/: FIAP - Datathon.postman_collection.json  FIAP-Local.postman_environment.json
scripts/: train_pipeline.py
signoz/: otel-collector-config.yaml  prometheus.yml
signoz/clickhouse/: cluster.xml  users.xml
src/: evaluate.py  feature_engineering.py  preprocessing.py  train.py  utils.py
tests/: conftest.py  test_api.py  test_evaluate.py  test_feature_engineering.py  test_preprocessing.py  test_train.py
