[tool.poetry]
name = "passos-magicos-ml"
version = "0.1.0"
description = "Modelo preditivo de risco de defasagem escolar - Datathon Passos Magicos"
authors = ["Rodrigo <rodrigozanelsp@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "app"}, {include = "monitoring"}]

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = ">=1.4"
lightgbm = ">=4.0"
xgboost = ">=2.0"
pandas = ">=2.2"
numpy = ">=1.26"
joblib = ">=1.3"
fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = ">=0.29"}
pydantic = ">=2.0"
opentelemetry-distro = "*"
opentelemetry-exporter-otlp = "*"
prometheus-client = ">=0.17"
evidently = ">=0.4"
streamlit = ">=1.30"
openpyxl = ">=3.1"
loguru = ">=0.7"
ipykernel = "^7.2.0"
pandas-stubs = "~=2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
httpx = ">=0.27"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov=app --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
